Added cl-log.test package, test-op, and speed tests. Implemented hierarchies

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,18 @@
+# defaults
+speed.file=/dev/null
+root.level=DEBUG
+root.appender=speed
 # Log4j configuration file.
-log4j.rootCategory=INFO, SIMPLE
+log4j.rootCategory=${root.level}, ${root.appender}
 # Available levels are DEBUG, INFO, WARN, ERROR, FATAL
 log4j.appender.SIMPLE=org.apache.log4j.ConsoleAppender
 log4j.appender.SIMPLE.layout=org.apache.log4j.SimpleLayout
+#
+log4j.appender.speed=org.apache.log4j.FileAppender
+log4j.appender.speed.file=${speed.file}
+log4j.appender.speed.layout=org.apache.log4j.SimpleLayout
+log4j.appender.speed.bufferedIO=true
+log4j.appender.speed.encoding=latin1
 #
 # A1 is a ConsoleAppender
 #
@@ -28,4 +38,4 @@ log4j.appender.A3.port=8881
 log4j.appender.A3.layout=org.apache.log4j.PatternLayout
 log4j.appender.A3.layout.ConversionPattern=%-5p %d{ISO8601} [%t] - %m%n
 
-log4j.category.cat1=DEBUG
+#log4j.category.cat1=DEBUG
