PROPERTY-CONFIGURATOR: strip whitespace from beginning of file-name properties

--- a/tests/log4cl.properties
+++ b/tests/log4cl.properties
@@ -1,6 +1,12 @@
 # test properties file
 
-log4cl:rootLogger = INFO, console
-log4cl:appender:console = console-appender
-log4cl:appender:console:immediate-flush = 
+log4cl:rootLogger = INFO, file1, console
+log4cl:appender:console = log4cl:console-appender
+log4cl:appender:console:layout = log4cl:pattern-layout
+log4cl:appender:console:layout:conversion-pattern =|%p| |%c| - %m%n
+log4cl:appender:file1 = log4cl:file-appender
+log4cl:appender:file1:file = /tmp/logfile.txt
+log4cl:appender:file1:immediate-flush = true
+
+
 
