--- a/tests/log4cl.properties
+++ b/tests/log4cl.properties
@@ -1,10 +1,10 @@
 # Copyright (c) 2012, Max Mikhanosha. All rights reserved.
-# 
+#
 # This file is licensed to You under the Apache License, Version 2.0
 # (the "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 # http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -13,12 +13,14 @@
 
 
 log4cl:rootLogger = INFO, file1, console
+#, syslog1
 log4cl:appender:console = log4cl:console-appender
 log4cl:appender:console:layout = log4cl:pattern-layout
 log4cl:appender:console:layout:conversion-pattern =|%p| |%c| - %m%n
 log4cl:appender:file1 = log4cl:file-appender
 log4cl:appender:file1:file = /tmp/logfile.txt
 log4cl:appender:file1:immediate-flush = true
-
-
-
+#log4cl:appender:syslog1 = log4cl:syslog-appender
+#log4cl:appender:syslog1:name = myprogram
+#log4cl:appender:syslog1:layout = log4cl:pattern-layout
+#log4cl:appender:syslog1:layout:conversion-pattern =%p %m
